# code-reviewer

./: .dockerignore  .env.example  .env.v2.example  .gitignore  Agents.md  CLAUDE.md  Dockerfile  LICENSE  README.md  WEB_UI_README.md  docker-compose.yaml  go.mod  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.atlas/: index.yaml
.atlas/atoms/: K-000001.yaml  K-000002.yaml  K-000003.yaml  K-000004.yaml  K-000005.yaml  K-000006.yaml  K-000007.yaml  K-000008.yaml  K-000009.yaml  K-000010.yaml  K-000011.yaml  K-000012.yaml  K-000013.yaml  K-000014.yaml  K-000015.yaml  K-000016.yaml  K-000017.yaml  K-000018.yaml  K-000019.yaml  K-000020.yaml  K-000021.yaml  K-000022.yaml  K-000023.yaml  (+12 more)
config/: config.yaml.example
docs/: GREENFIELD_PRODUCT_DESIGN.md  OPERATIONS_RUNBOOK.md  POLICIES.md  REWRITE_STATUS.md
e2e/: dashboard.spec.ts  fake-engine.sh  fake-github.mjs  start-reviewd.sh
migrations/: embed.go
prompts/: adaptive_review_prompt.md  exemplary_review_prompt.md  fast_review_prompt.md  output_format.md  review_guidelines.md  review_prompt.txt  world_class_review_prompt.md
tests/: __init__.py  test_agent_review_model.py  test_analytics.py  test_github_client.py  test_json_failure_handling.py  test_own_pr_mode.py  test_own_pr_review_request.py  test_pending_approvals_outdated.py  test_review_effort.py  test_review_prompt_context.py  test_review_requests_ui.py  test_review_serialization.py  test_review_started_comments.py  test_sound_notifier.py  test_speech_rate.py  test_typed_structures.py
(+212 files in other folders)
